--- a/Assignment11-ML.SuraS.ipynb
+++ b/Assignment11-ML.SuraS.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "machine_shape": "hm",
       "gpuType": "T4",
       "include_colab_link": true
@@ -455,7 +456,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Discussion:**"
+        "**Discussion:**\n",
+        "\n",
+        "The analysis of the 37 audio files reveals a consistent technical standard across the dataset. Every file was found to have a sampling rate of 16,000 Hz (16 kHz) and a bit depth of 16-bit. The files are uncompressed or losslessly compressed (FLAC), as evidenced by the linear relationship between file duration and file size, longer files like `121-127105-0025` (16.07s) are significantly larger (301 KB) than short ones like `121-127105-0021` (2.00s, 45 KB). The waveforms visually confirm these durations, showing varying amplitude envelopes that correspond to speech activity and pauses."
       ],
       "metadata": {
         "id": "FrAX_CIy77GK"
@@ -464,10 +467,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Analysis:**"
+        "**Analysis:**\n",
+        "\n",
+        "* **Sampling Rate (16 kHz):** This rate is crucial for speech recognition because the Nyquist-Shannon sampling theorem states that a digital signal can perfectly reconstruct frequencies up to half its sampling rate. For 16 kHz, this limit is 8 kHz. Since human speech intelligibility is primarily contained within the 300 Hz to 3400 Hz range (telephony standard) and fricatives extend up to ~8 kHz, 16 kHz captures all necessary phonetic details without wasting storage on ultrasonic frequencies.\n",
+        "* **Bit Depth (16-bit):** A 16-bit depth provides a dynamic range of approximately 96 dB. This is sufficient to distinguish between quiet whispers and loud exclamations without introducing significant quantization noise (graininess). Lower bit depths (e.g., 8-bit) would introduce noise that could degrade ASR accuracy.\n",
+        "* **File Size Relationship:** The file size is directly proportional to duration because the data rate is constant ($16,000 \\text{ samples/s} \\times 16 \\text{ bits/sample} = 256 \\text{ kbps}$). This predictability allows for efficient storage planning in large-scale datasets."
       ],
       "metadata": {
-        "id": "DmHno-MK8BN3"
+        "id": "a2IB2m_yVq1r"
       }
     },
     {
@@ -608,7 +615,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Discussion:**"
+        "**Discussion:**\n",
+        "\n",
+        "The text cleaning pipeline successfully standardized the transcripts. By converting to lowercase, removing filler words (like \"um\", \"uh\"), and stripping punctuation, we reduced the vocabulary size to its semantic core. Using SpaCy for tokenization and lemmatization further consolidated word forms; for example, \"women\" and \"woman\" or \"cried\" and \"cry\" were mapped to their base lemmas."
       ],
       "metadata": {
         "id": "v1Norr-h8IN3"
@@ -617,7 +626,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Analysis:**"
+        "**Analysis:**\n",
+        "\n",
+        "* **Handling Misspellings:** The current pipeline does not explicitly handle misspellings. Whisper is generally robust, but if errors occur, a library like `pyspellchecker` or `TextBlob` could be integrated before tokenization. However, automatic correction risks altering proper nouns (e.g., changing \"Douglas\" to a common word if not recognized).\n",
+        "* **Multilingualism:** If the audio were code-switched (e.g., Spanish/English), this pipeline using `en_core_web_sm` would fail to correctly lemmatize non-English words. To address this, I would modify the pipeline to include a **Language Identification (LID)** step (using `langdetect` or a transformer classifier) at the sentence or phrase level. Based on the detected language, the pipeline would dynamically switch between SpaCy models (e.g., `es_core_news_sm` for Spanish) to ensure accurate processing."
       ],
       "metadata": {
         "id": "20GQ9BdK8LX0"
@@ -852,7 +864,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Discussion:**"
+        "**Discussion:**\n",
+        "\n",
+        "The Exploratory Data Analysis (EDA) highlights that this is likely a narrative dataset. The most frequent words—\"story\", \"tell\", \"Douglas\", \"woman\"—suggest a storytelling context. The speaking speed analysis shows a normal distribution centered around ~2.8 words/second, which is typical for read speech. The filler word analysis returned an empty result, indicating the speakers were likely reading from a script or were highly fluent, or that Whisper's `base` model implicitly filtered some disfluencies during transcription."
       ],
       "metadata": {
         "id": "rLW5x2z_8O3F"
@@ -861,7 +875,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Analysis:**"
+        "**Analysis:**\n",
+        "\n",
+        "* **Top 20 Words:** These are mostly content words (\"story\", \"lady\", \"write\") rather than function words (which were removed as stopwords). This gives us a clear indication of the dataset's topic: a narrative about a woman, a story, and a character named Douglas.\n",
+        "* **Hapax Legomena (153 words):** A large portion of the vocabulary (153 out of 187 unique words) appears only once. This high number is typical for short text snippets and indicates a diverse vocabulary relative to the dataset size. These words likely capture specific details or less common adjectives (\"unanimous\", \"postponement\") that provide the narrative color.\n",
+        "* **Spectrogram:** The spectrogram for `121-127105-0000` shows distinct horizontal bands (formants) corresponding to vowels and scattered high-frequency energy corresponding to consonants. The silence intervals are clearly visible as dark vertical gaps, correlating with the pauses seen in the waveform."
       ],
       "metadata": {
         "id": "s670eWCB8RRp"
@@ -998,7 +1016,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Discussion:**"
+        "**Discussion:**\n",
+        "\n",
+        "We compared two text feature extraction methods: Bag-of-Words (BoW) and TF-IDF. Both identified similar top terms like \"Douglas\", \"know\", and \"lady\". We also visualized MFCCs, which represent the audio signal's spectral envelope."
       ],
       "metadata": {
         "id": "VxoU0aLy8U8V"
@@ -1007,7 +1027,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Analysis:**"
+        "**Analysis:**\n",
+        "\n",
+        "* **Text Features (BoW vs. TF-IDF):** BoW purely counts frequency, favoring words that appear often. TF-IDF (Term Frequency-Inverse Document Frequency) balances frequency with uniqueness; it penalizes words that appear in *every* document. In this small dataset, the top features were identical, but in a larger corpus, TF-IDF would better highlight keywords unique to specific files (e.g., a specific character mentioned only in one chapter) while downgrading common domain words like \"story\".\n",
+        "* **Audio Features (MFCCs):** The Mel-Frequency Cepstral Coefficients (MFCCs) capture the timbre of the voice independent of pitch. The 13 coefficients shown in the heatmap represent the shape of the vocal tract at each time frame.\n",
+        "* **Downstream Tasks:** I would use **Text Features (ASR output)** for semantic tasks like Topic Modeling or Intent Classification because the meaning lies in the words. I would use **Raw Audio/MFCCs** for paralinguistic tasks like Emotion Recognition (detecting anger vs. joy) or Speaker Identification, as these cues are lost in the text transcription."
       ],
       "metadata": {
         "id": "eNHbtgDZ8XR5"
@@ -1166,7 +1190,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Discussion:**"
+        "**Discussion:**\n",
+        "\n",
+        "The Word Error Rate (WER) evaluation compared our Whisper transcripts against the ground truth. The average WER was approximately 0.027 (2.7%), which implies an accuracy of ~97.3%. The worst-performing file had a WER of ~0.27 (27%), while many files achieved a perfect 0.0 WER."
       ],
       "metadata": {
         "id": "eHnVCGCj8axr"
@@ -1175,10 +1201,25 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Analysis:**"
+        "**Analysis:**\n",
+        "\n",
+        "* **Metric Interpretation:** A WER of 0.027 is excellent and indicates professional-level transcription. The errors are likely minor.\n",
+        "* **Error Analysis:** The \"Worst WER\" cases often involve proper nouns or slight formatting differences that normalization didn't fully catch. For example, `121-127105-0019` had a high WER because the reference text was uppercase (\"MISSUS GRIFFIN...\") while the hypothesis was mixed case (\"This is Griffin...\"). Although we normalized for case, \"Missus\" vs \"This is\" is a substitution error caused by acoustic similarity.\n",
+        "* **Conclusion:** The low WER confirms that the Whisper `base` model is highly effective for this clear, read-speech dataset."
       ],
       "metadata": {
         "id": "sSkH8dTR8cTv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Final Reflection**\n",
+        "\n",
+        "This assignment explored the end-to-end speech processing pipeline, confirming that standardized 16 kHz, 16-bit audio is essential for high-fidelity ASR. While the Whisper model achieved a high accuracy of ~97.3%, we found that a rigorous NLP cleaning pipeline was still necessary to normalize \"noisy\" spoken text by removing fillers and unifying word forms. Exploratory analysis revealed the dataset's linguistic diversity through unique word counts, while feature extraction highlighted the distinction between using TF-IDF for semantic meaning versus MFCCs for audio timbre. Ultimately, the low Word Error Rate validates the power of modern ASR systems, demonstrating that robust speech applications rely on a tight integration of signal processing and natural language techniques."
+      ],
+      "metadata": {
+        "id": "y6xAhk2iXC6M"
       }
     }
   ]
