--- a/Assignment11-ML.SuraS.ipynb
+++ b/Assignment11-ML.SuraS.ipynb
@@ -866,7 +866,7 @@
       "source": [
         "**Discussion:**\n",
         "\n",
-        "The Exploratory Data Analysis (EDA) highlights that this is likely a narrative dataset. The most frequent words—\"story\", \"tell\", \"Douglas\", \"woman\"—suggest a storytelling context. The speaking speed analysis shows a normal distribution centered around ~2.8 words/second, which is typical for read speech. The filler word analysis returned an empty result, indicating the speakers were likely reading from a script or were highly fluent, or that Whisper's `base` model implicitly filtered some disfluencies during transcription."
+        "The Exploratory Data Analysis (EDA) highlights that this is likely a narrative dataset. The most frequent words: \"story\", \"tell\", \"Douglas\", \"woman\" suggest a storytelling context. The speaking speed analysis shows a normal distribution centered around ~2.8 words/second, which is typical for read speech. The filler word analysis returned an empty result, indicating the speakers were likely reading from a script or were highly fluent, or that Whisper's `base` model implicitly filtered some disfluencies during transcription."
       ],
       "metadata": {
         "id": "rLW5x2z_8O3F"
